# ekf_soc2

./: .gitignore  CMakeLists.txt  README.md  signals.csv  signals_with_est.csv  validate_data.py
include/: ekf_soc.hpp  matrix.hpp
src/: ekf_soc.cpp  main.cpp
